--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -144,6 +144,7 @@ input {
 }
 
 h1,
+h1,
 h2,
 h3,
 h4,
@@ -153,11 +154,19 @@ h6 {
   margin: 0px;
   padding: 0;
   color: var(--header);
-  text-transform: initial;
   transition: all 0.4s ease-in-out;
-  text-transform: capitalize;
+  text-transform: none;
 }
 
+h1::first-letter,
+h2::first-letter,
+h3::first-letter,
+h4::first-letter,
+h5::first-letter,
+h6::first-letter,
+p::first-letter {
+  text-transform: uppercase;
+}
 h1 {
   font-size: 90px;
   font-weight: 400;
@@ -3841,11 +3850,21 @@ span {
 }
 .hero-1 .hero-content {
   position: relative;
-  max-width: 655px;
+  width: 100%;
+  max-width: 100vw;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  text-align: center;
+  margin: 0 auto;
+  padding: 60px 0;
 }
 .hero-1 .hero-content h1 {
   color: var(--white);
   margin-bottom: 20px;
+  font-size: 60px;
+  font-weight: 700;
 }
 .hero-1 .hero-content p {
   color: var(--bg);
